# Ohte-modar-2024

./: .gitignore  README.md  changelog.md
kurssit/ot2023/laskarit/viikko 2/: pyproject.toml
kurssit/ot2023/laskarit/viikko 2/maksukortti/src/tests/: maksukortti_test.py
kurssit/ot2023/laskarit/viikko 2/unicafe/: .coverage
kurssit/ot2023/laskarit/viikko1/: gitlog.txt  komentorivi.txt
kurssit/ot2023/laskarit/viikko2/: pyproject.toml
kurssit/ot2023/laskarit/viikko2/maksukortti/: .coverage
kurssit/ot2023/laskarit/viikko2/maksukortti/src/: maksukortti.py
kurssit/ot2023/laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py
kurssit/ot2023/laskarit/viikko3/: HSL-kioski.md  laajennettu_monopoli.md
kurssit/ot2023/viikko1/: eka.txt  kolmas.txt
memorygame/: .coverage  .coveragerc  .pylintrc  RequirementDefinition.md  arkkitehtuuri.md  mydata.db  pylint.rc  pyproject.toml  tasks.py  tuntikirjanpito.md
memorygame/documentation/: RequirementDefinition.md  arkkitehtuuri.md  changelog.md
memorygame/memorygame/: database.py  game.py  game_menu.py  mydata.db  signup_login.py  window.py
memorygame/src/: .coverage  create_game.py  create_packs.py  display_packs.py  edit_pack.py  main.py  memoryGame.py  memory_game.py  memorygame.py  mydata.db  services.py
memorygame/src/documentation/: arkkitehtuuri.md  tuntikirjanpito.md
memorygame/src/htmlcov/: __init___py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_app_py.html  index.html  services_py.html  status.json
memorygame/src/services/: services.py
memorygame/src/tests/: test_app.py
(+1 files in other folders)
