[tool.poetry]
name = "memorygame"
version = "0.1.0"
description = ""
authors = ["modar_algayal  <mudar.algayal@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysimplegui = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
