[tool.poetry]
name = "memorygame"
version = "0.1.0"
description = ""
authors = ["modar_algayal  <mudar.algayal@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysimplegui = "^5.0.3"
invoke = "^2.2.0"
coverage = "^7.4.4"
pytest = "^8.1.1"
pylint = "^3.1.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
