[tool.poetry]
name = "viikko 2"
version = "0.1.0"
description = ""
authors = ["modar_algayal  <mudar.algayal@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
